css/parser/tests/errors/important/basic/output.stderr
error: Expected !important
 --> $DIR/tests/errors/important/basic/input.css:2:18
  |
2 |     color: white !!important;
  |                  ^^^^^^^^^^^

